CB-25770 Refactor and enhance CredentialService for better maintainability
- Split complex functionalities into dedicated services (CredentialCreateService, CredentialRetrievalService, etc.)
- Enhance dependency injection usage for better testing and maintenance
- Improve method naming and organization for clearer readability
- Implement detailed error handling and validation processes

This refactor improves the codebase's maintainability, readability, and error management, aligning with best practices in service architecture.